# qbusbridge

./: .clang-format  .gitignore  .gitmodules  CONFIGURATION  CONFIGURATION.md  CONFIGURATION_ZH  CONFIGURATION_ZH.md  LICENSE  README  README.md  README_ZH.md  build_dependencies.sh  format_code.sh
c/: build.sh
c/examples/: .gitignore  CMakeLists.txt  Makefile  build.sh
c/examples/consumer/: CMakeLists.txt  Makefile  build.sh  qbus_consumer_example.c  qbus_pause_resume_example.c
c/examples/producer/: CMakeLists.txt  Makefile  build.sh  qbus_producer_example.c
c/src/: CMakeLists.txt  qbus_consumer.cc  qbus_consumer.h  qbus_producer.cc  qbus_producer.h  qbus_result.h
config/: kafka.ini  pulsar.ini
cxx/: build.sh  build_librdkafka.sh  tags
cxx/examples/: .gitignore  CMakeLists.txt  build.sh
cxx/examples/consumer/: CMakeLists.txt  Makefile  build.sh  qbus_consumer_example.cc  qbus_pause_resume_example.cc
cxx/examples/producer/: CMakeLists.txt  Makefile  build.sh  qbus_producer_example.cc
cxx/src/: CMakeLists.txt  mq_type.h  qbus_config.cc  qbus_config.h  qbus_constant.h  qbus_consumer.cc  qbus_consumer.h  qbus_consumer_callback.h  qbus_consumer_imp.cc  qbus_consumer_imp.h  qbus_helper.cc  qbus_helper.h  qbus_producer.cc  qbus_producer.h  qbus_producer_imp.h  qbus_producer_imp_map.cc  qbus_producer_imp_map.h  qbus_rdkafka.cc  qbus_rdkafka.h  qbus_record_msg.cc  qbus_record_msg.h  qbus_topic_partition_set.cc  qbus_topic_partition_set.h  tags
cxx/src/kafka/: qbus_config.cc  qbus_config.h  qbus_constant.h  qbus_consumer.cc  qbus_consumer.h  qbus_helper.cc  qbus_helper.h  qbus_noncopyable.h  qbus_producer.cc  qbus_producer.h  qbus_producer_imp.h  qbus_producer_imp_map.cc  qbus_producer_imp_map.h  qbus_rdkafka.cc  qbus_rdkafka.h  qbus_record_msg.cc  qbus_record_msg.h  qbus_thread.cc  qbus_thread.h  qbus_topic_partition_set.cc  qbus_topic_partition_set.h
cxx/src/kafka/util/: logger.cc  logger.h
cxx/src/pulsar/: log4cplus_logger.cc  log4cplus_logger.h  log_utils.h  make_unique.h  property_tree_proxy.cc  property_tree_proxy.h  pulsar_config.cc  pulsar_config.h  qbus_consumer.cc  qbus_consumer.h  qbus_consumer_config.cc  qbus_consumer_config.h  qbus_php_consumer.cc  qbus_php_consumer.h  qbus_php_producer.cc  qbus_php_producer.h  qbus_producer.cc  qbus_producer.h  qbus_producer_config.cc  qbus_producer_config.h  qbus_producer_map.cc  qbus_producer_map.h  retryable_send_callback.cc  retryable_send_callback.h  timer.cc  timer.h  to_string.h
cxx/util/: benchmarker.h  logger.cc  logger.h
golang/: CMakeLists.txt  Makefile  README  README.md  TopMakefile  build.sh  clean.sh  qbus.i
golang/examples/: .gitignore  build.sh  clean.sh  consume_pause_resume.go  consumer.go  consumer_commit_in_goroutine.go  producer.go
php/: CMakeLists.txt  Makefile  README  TopMakefile  build.sh  clean.sh  qbus.i
php/examples/: README  consume_pause_resume.php  consumer.php  producer.php
pulsar-client-cpp/: CMakeLists.txt
pulsar-client-cpp/lib/: CMakeLists.txt
python/: CMakeLists.txt  Makefile  README  TopMakefile  build.sh  clean.sh  qbus.i
python/examples/: README  consume_pause_resume.py  consumer.config  consumer.py  producer.py
